<resources>
    <string name="app_name">FunnyChat</string>
    <string name="some_text">Some text</string>
    <string name="message_field_hint">Type your message here...</string>
    <string name="goto_field_hint">Go to channel...</string>
    <string name="channel_list_header_str">Channels</string>
    <string name="user_list_header_str">Users</string>
    <string name="prompt_login">Username</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="user_not_found">User not found</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="user_data_error">User data error</string>
    <string name="exit">Exit</string>
    <string name="server">Server</string>
    <string name="sex">Sex</string>
    <string name="ipinfo">IP info</string>
</resources>
