<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/parent_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/left_block"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="8dp">

            <AutoCompleteTextView
                android:id="@+id/goto_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextField"
                android:completionThreshold="1"
                android:hint="@string/goto_field_hint"
                android:padding="2dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/channel_list_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/channel_list_header_str"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/channel_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false" />

            <TextView
                android:id="@+id/user_list_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_list_header_str"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/user_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_block"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp">

                <com.example.funnychat.widgets.AnimatedToggleButton
                    android:id="@+id/button_menu"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/ic_button_menu_selector"
                    android:checked="true"
                    android:text=""
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/self_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/some_text"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/button_menu"
                    app:layout_constraintBottom_toBottomOf="@id/button_menu"
                    app:layout_constraintRight_toRightOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chat_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/message_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/message_list_separator"
                    app:layout_constraintBottom_toTopOf="@id/message_field"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/message_field"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:textSize="16sp"
                    android:inputType="textMultiLine"
                    android:maxLength="64"
                    android:gravity="top"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="32dp"
                    android:background="@color/colorTextField"
                    android:hint="@string/message_field_hint"
                    app:layout_constraintTop_toBottomOf="@id/message_list"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:importantForAutofill="no" />

                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/send_button"
                    android:background="@drawable/ic_send_button"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/message_list"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>